[package]
name = "arcweave-rust"
version = "0.0.1"
edition = "2024"
license = "MIT/Apache-2.0"
description = "Arcweave project runtime for Rust"
categories = ["game-development"]
keywords = ["gamedev", "arcweave"]
repository = "https://github.com/onfeuh/arcweave-rust"


[dependencies]
html-escape = "0.2.13"
nom = "8.0.0"
rand = { version = "0.10.0", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
